[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "flask>=3.1.2",
    "py-tgcalls>=2.2.7",
    "pyrogram>=2.0.106",
    "requests>=2.32.5",
    "tgcrypto>=1.2.5",
    "werkzeug>=3.1.3",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.8.27",
]
